<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_name">Shoe Store</string>
    <string name="username_hint">Email Address</string>
    <string name="password_label">Password</string>
    <string name="signin_label">Sign In</string>
    <string name="signup_label">Sign Up</string>
    <string name="username_label">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_screen_label">LOGIN</string>
    <string name="welcome_screen_label">WELCOME</string>
    <string name="instruction_screen_label">INSTRUCTIONS</string>
    <string name="detail_screen_label">DETAILS</string>
    <string name="list_screen_label">LIST OF VIEWS</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="login_label">Logout</string>
    <string name="new_shoe_label">New Shoe</string>
    <string name="name_label">Name</string>
    <string name="company_label">Company</string>
    <string name="size_label">Size</string>
    <string name="description_label">Description</string>
    <string name="name_hint">Name</string>
    <string name="size_hint">Size</string>
    <string name="company_hint">Company</string>
    <string name="description_of_shoe_label">Description of shoe</string>
    <string name="instructions">Instructions</string>
    <string name="message1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="message2">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</string>
    <string name="done">Done</string>
    <string name="welcome1">Welcome</string>
    <string name="welcome2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="welcome3">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</string>
    <string name="instructions_button">Instructions</string>
    <string name="add_a_new_shoe">Add a new shoe</string>
</resources>
